# Logarythm

./: CMakeLists.txt  LICENSE  README.md
Logarythm/: example.kdev4
Logarythm/src/: example.cpp  example.h  example.ui  main.cpp
